# Automated_Testing_and_Code_Intelligence

./: .env.example  .gitignore  LICENSE  README.md  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  revision_1_agent.py  revision_2_agent.py  revision_3_pipeline.py  target_code.py  test_add_numbers.py  test_divide_numbers.py  test_github.py  test_target_code.py
.github/workflows/: ci.yml
apps/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/codeintel_api/: __init__.py  auth.py  billing.py  engine_factory.py  main.py  rate_limit.py  settings.py  store.py
apps/api/codeintel_api/db/: __init__.py  models.py  repository.py  session.py
apps/api/codeintel_api/migrations/: env.py
apps/api/codeintel_api/migrations/versions/: 0001_initial.py
apps/api/codeintel_api/routes/: health.py  runs.py  scans.py  webhooks_github.py  webhooks_stripe.py
apps/api/tests/: conftest.py  test_auth.py  test_health.py  test_runs.py  test_scans.py  test_webhooks_github.py
apps/dashboard/: .env.example  next.config.mjs  package.json  tailwind.config.ts
apps/dashboard/src/: middleware.ts
apps/dashboard/src/app/: layout.tsx  page.tsx
apps/dashboard/src/app/api/health/: route.ts
apps/dashboard/src/app/api/stripe/webhook/: route.ts
apps/dashboard/src/app/dashboard/: layout.tsx  page.tsx
apps/dashboard/src/app/dashboard/billing/: page.tsx
apps/dashboard/src/app/dashboard/coverage/: page.tsx
apps/dashboard/src/app/dashboard/repos/: page.tsx
apps/dashboard/src/app/dashboard/runs/: page.tsx
apps/dashboard/src/app/dashboard/runs/[id]/: page.tsx
apps/dashboard/src/app/sign-in/[[...sign-in]]/: page.tsx
apps/dashboard/src/app/sign-up/[[...sign-up]]/: page.tsx
apps/dashboard/src/components/: nav.tsx
apps/dashboard/src/lib/: api.ts
apps/dashboard/src/styles/: globals.css
apps/vscode-extension/: .vscodeignore  README.md  package.json  tsconfig.json
apps/vscode-extension/src/: api-client.ts  auth.ts  extension.ts
apps/vscode-extension/src/commands/: generate-tests.ts  open-dashboard.ts  scan-file.ts
docs/: DOCUMENTATION_REPORT.md  architecture.md  pricing.md  security.md  self-hosting.md
infra/: docker-compose.yml
infra/docker/: codeintel-node.Dockerfile  codeintel-py.Dockerfile
infra/helm/: Chart.yaml  values.yaml
infra/helm/templates/: api-deployment.yaml  ingress.yaml  secrets.yaml  worker-deployment.yaml
infra/terraform/: main.tf  variables.tf
tests/: test_add_numbers.py  test_divide_numbers.py
