[project]
name = "automated-testing-and-code-intelligence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "groq>=1.2.0",
    "pydantic-ai>=1.97.0",
    "PyGithub>=2.6.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

