[project]
name = "codeintel"
version = "0.1.0"
description = "CodeIntel — AI test engineer that lives in your repo. Monorepo root."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    "packages/engine",
    "apps/api",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["packages/engine/legacy"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
# B008 = "function call in default arg" — FastAPI's `Depends(...)` idiom requires it.
# UP042 = prefer StrEnum — fine but we keep `str, Enum` for pydantic_v2 compat with older 3.12.x.
# RUF012 = mutable class defaults — Pydantic models handle this safely.
ignore = ["E501", "B008", "UP042", "RUF012"]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["packages/engine/legacy"]

[tool.pytest.ini_options]
testpaths = ["packages/engine/tests", "apps/api/tests"]
pythonpath = ["packages/engine", "apps/api"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
