[project]
name = "codeintel-api"
version = "0.1.0"
description = "CodeIntel API — FastAPI gateway, GitHub App, billing webhooks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "codeintel-engine",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.2",
    "psycopg[binary]>=3.2.1",
    "redis>=5.0.8",
    "httpx>=0.27.0",
    "PyJWT[crypto]>=2.9.0",
    "stripe>=10.12.0",
    "sentry-sdk[fastapi]>=2.13.0",
    "structlog>=24.4.0",
]

[tool.uv.sources]
codeintel-engine = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["codeintel_api"]
